--- a/Notebooks/02_data_wrangling.ipynb
+++ b/Notebooks/02_data_wrangling.ipynb
@@ -709,7 +709,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Gwen**\n",
+    "## Gwen's Notes\n",
     "* first line:\n",
     "    * [ski_data.isnull().sum(), 100 * ski_data.isnull().mean()] creates two DFs, the first counts the sum of null values in each column, the second gets the percentage (hence \"100 *\") of ????? I think it gets the average of how many resorts have a missing value in that column. \n",
     "    * pd.concat smushes those two DFs together horizontally (axis = 1) \n",
@@ -941,7 +941,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Gwen** This looks accurate. If you go back to when we did .info() earlier, there were 330 values (for 330 resorts) for all columns from region-total chairs, that matches with this count. "
+    "## Gwen's Notes\n",
+    "This looks accurate. If you go back to when we did .info() earlier, there were 330 values (for 330 resorts) for all columns from region-total chairs, that matches with this count. "
    ]
   },
   {
@@ -966,14 +967,142 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Gwen's Notes:\n",
+    "Below returns a DF with columns that posess non-numerical values. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alyeska Resort</td>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>Alaska</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Eaglecrest Ski Area</td>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>Alaska</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Hilltop Ski Area</td>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>Alaska</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Arizona Snowbowl</td>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>Arizona</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Sunrise Park Resort</td>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>Arizona</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>325</th>\n",
+       "      <td>Meadowlark Ski Lodge</td>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>Wyoming</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>326</th>\n",
+       "      <td>Sleeping Giant Ski Resort</td>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>Wyoming</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>327</th>\n",
+       "      <td>Snow King Resort</td>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>Wyoming</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>328</th>\n",
+       "      <td>Snowy Range Ski &amp; Recreation Area</td>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>Wyoming</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>329</th>\n",
+       "      <td>White Pine Ski Area</td>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>Wyoming</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>330 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  Name   Region    state\n",
+       "0                       Alyeska Resort   Alaska   Alaska\n",
+       "1                  Eaglecrest Ski Area   Alaska   Alaska\n",
+       "2                     Hilltop Ski Area   Alaska   Alaska\n",
+       "3                     Arizona Snowbowl  Arizona  Arizona\n",
+       "4                  Sunrise Park Resort  Arizona  Arizona\n",
+       "..                                 ...      ...      ...\n",
+       "325               Meadowlark Ski Lodge  Wyoming  Wyoming\n",
+       "326          Sleeping Giant Ski Resort  Wyoming  Wyoming\n",
+       "327                   Snow King Resort  Wyoming  Wyoming\n",
+       "328  Snowy Range Ski & Recreation Area  Wyoming  Wyoming\n",
+       "329                White Pine Ski Area  Wyoming  Wyoming\n",
+       "\n",
+       "[330 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Code task 6#\n",
     "#Use ski_data's `select_dtypes` method to select columns of dtype 'object'\n",
-    "ski_data.___(___)"
+    "ski_data.select_dtypes(include = 'object')"
    ]
   },
   {
@@ -995,13 +1124,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Crystal Mountain    2\n",
+       "Alyeska Resort      1\n",
+       "Brandywine          1\n",
+       "Boston Mills        1\n",
+       "Alpine Valley       1\n",
+       "Name: Name, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Code task 7#\n",
     "#Use pandas' Series method `value_counts` to find any duplicated resort names\n",
-    "ski_data['Name'].___.head()"
+    "ski_data['Name'].value_counts().head()"
    ]
   },
   {
@@ -1020,31 +1165,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Alyeska Resort, Alaska    1\n",
+       "Snow Trails, Ohio         1\n",
+       "Brandywine, Ohio          1\n",
+       "Boston Mills, Ohio        1\n",
+       "Alpine Valley, Ohio       1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Code task 8#\n",
     "#Concatenate the string columns 'Name' and 'Region' and count the values again (as above)\n",
-    "(ski_data[___] + ', ' + ski_data[___]).___.head()"
+    "(ski_data['Name'] + ', ' + ski_data['Region']).value_counts().head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Alyeska Resort, Alaska    1\n",
+       "Snow Trails, Ohio         1\n",
+       "Brandywine, Ohio          1\n",
+       "Boston Mills, Ohio        1\n",
+       "Alpine Valley, Ohio       1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Code task 9#\n",
     "#Concatenate 'Name' and 'state' and count the values again (as above)\n",
-    "(ski_data[___] + ', ' + ski_data[___]).___.head()"
+    "(ski_data['Name'] + ', ' + ski_data['state']).value_counts().head()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "**NB** because you know `value_counts()` sorts descending, you can use the `head()` method and know the rest of the counts must be 1."
    ]
@@ -1222,13 +1397,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Code task 10#\n",
     "#Calculate the number of times Region does not equal state\n",
-    "(ski_data.Region ___ ski_data.state).___"
+    "(ski_data.Region != ski_data.state).sum()"
    ]
   },
   {
@@ -1300,20 +1486,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Gwen's Notes\n",
+    "If you add up Sierra Nevada, Salt Lake City, Mt. Hood, and Northern California, you get 33. This is the same number we found earlier when we calculated how often Region != state. Yay!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "A casual inspection by eye reveals some non-state names such as Sierra Nevada, Salt Lake City, and Northern California. Tabulate the differences between Region and state. On a note regarding scaling to larger data sets, you might wonder how you could spot such cases when presented with millions of rows. This is an interesting point. Imagine you have access to a database with a Region and state column in a table and there are millions of rows. You wouldn't eyeball all the rows looking for differences! Bear in mind that our first interest lies in establishing the answer to the question \"Are they always the same?\" One approach might be to ask the database to return records where they differ, but limit the output to 10 rows. If there were differences, you'd only get up to 10 results, and so you wouldn't know whether you'd located all differences, but you'd know that there were 'a nonzero number' of differences. If you got an empty result set back, then you would know that the two columns always had the same value. At the risk of digressing, some values in one column only might be NULL (missing) and different databases treat NULL differently, so be aware that on many an occasion a seamingly 'simple' question gets very interesting to answer very quickly!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "state       Region             \n",
+       "California  Sierra Nevada          20\n",
+       "            Northern California     1\n",
+       "Nevada      Sierra Nevada           2\n",
+       "Oregon      Mt. Hood                4\n",
+       "Utah        Salt Lake City          6\n",
+       "Name: Region, dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Code task 11#\n",
     "#Filter the ski_data dataframe for rows where 'Region' and 'state' are different,\n",
     "#group that by 'state' and perform `value_counts` on the 'Region'\n",
-    "(ski_data[ski_data.___ ___ ski_data.___]\n",
-    " .groupby(___)[___]\n",
+    "(ski_data[ski_data.Region != ski_data.state]\n",
+    " .groupby('state')['Region']\n",
     " .value_counts())"
    ]
   },
@@ -1333,14 +1544,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Region    38\n",
+       "state     35\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Code task 12#\n",
     "#Select the 'Region' and 'state' columns from ski_data and use the `nunique` method to calculate\n",
     "#the number of unique values in each\n",
-    "ski_data[[___, ___]].___"
+    "ski_data[['Region', 'state']].nunique()"
    ]
   },
   {
