updated summary re: what to do with state labels

--- a/Notebooks/03_exploratory_data_analysis.ipynb
+++ b/Notebooks/03_exploratory_data_analysis.ipynb
@@ -4002,7 +4002,7 @@
     "**A: 1** \n",
     "\n",
     "\n",
-    "Categorical features of the data include state, region, and resort name. Since there does not appear to be an obvious correlation between state and my target feature, adult weekend ticket price, I would vote for getting rid of the state labels now that the merge has been completed with the ratio features of chairs: run, chairs: skiable terrain, fastQuads: runs, fastQuad: skiable terrain as the information is no longer useful analysis. I think the most useful information that these state labels provided us was the ability to create the competition ratio features. But I’m not sure!\n",
+    "Categorical features of the data include state, region, and resort name. Since there does not appear to be an obvious correlation between state and my target feature, adult weekend ticket price, I would vote for getting rid of the state labels now that the merge has been completed with the ratio features of chairs: run, chairs: skiable terrain, fastQuads: runs, fastQuad: skiable terrain as the information is no longer useful analysis. I think the most useful information that these state labels provided us was the ability to create the competition ratio features. But I’m not sure! I read in the next unit that you can encode categorical variables. If it's smart to keep the state data, then we could encode the states. I would sort states alphabetically and then assign a number 1-50 (keeping in mind I believe we only have 35 states, even if Alaska didn't exist in the data it would still mean 1)/ \n",
     "\n",
     "I think the features we found most likely to be helpful for modeling aside from the ratios we created were vertical drop, fast quads, runs, total chairs, and snow-making acres.\n"
    ]
